log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata: 
      labels:
        app: log-output
    spec: 
      containers:
        - name: log-output
          image: popcorn27/log-output:v1.2 
          imagePullPolicy: IfNotPresent
